<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <!-- Logo Aplikasi -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_launcher_foreground"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"/>

    <!-- Greeting Text -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_marginBottom="8dp"
        android:textStyle="bold"
        android:textColor="@android:color/black" />

    <!-- App Name -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_app"
        android:textAlignment="center"
        android:textSize="14sp"
        android:layout_marginBottom="24dp"
        android:textColor="@android:color/darker_gray"/>

    <!-- Username Field -->
    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_username"
        android:drawableStart="@drawable/ic_person"
        android:padding="14dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@android:color/darker_gray"
        android:inputType="text"
        android:textColor="@android:color/black"/>

    <!-- Password Field -->
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:drawableStart="@drawable/ic_lock"
        android:padding="14dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@android:color/darker_gray"
        android:inputType="textPassword"
        android:textColor="@android:color/black"/>

    <!-- Button Login -->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/cardview_dark_background"
        android:paddingVertical="12dp"
        android:layout_marginBottom="20dp"/>

    <!-- Register Link -->
    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"/>

</LinearLayout>
